Source/WebCore/platform/mac/LocalCurrentGraphicsContext.h
@@ -39,6 +39,7 @@ public:
 private:
     GraphicsContext* m_savedGraphicsContext;
     NSGraphicsContext* m_savedNSGraphicsContext;
+    bool m_didSetGraphicsContext;
 #if USE(SKIA)
     gfx::SkiaBitLocker m_skiaBitLocker;
 #endif
